--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,7 @@
             <div class="header-lang">
               <ul>
                 <li><a href="#"><img src="assets/images/lang-icon_01.png"></a></li>
-                <li><a href="./ruspage.html"><img src="assets/images/lang-icon_02.png"></a></li>
+                <li><a href="./runpage2.html"><img src="assets/images/lang-icon_02.png"></a></li>
               </ul>
             </div>
             <div id="sidebar" class="mobilemenu">
@@ -73,10 +73,10 @@
       <section class="homebanner">
         <div class="main-container">
           <div class="inner-content text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-            <h1>Welcome to <br> Roman Lab </h1>
-            <p>Leading software and web development company <br> founded and operated by Roman Larionov </p>
+            <h1>Welcome to <br> Roman Larionov's <br> Portfolio </h1>
+            <p>Roman Larionov <br> Web Developer & Software Engineer </p>
             <div class="action-button">
-              <a href="#projects" class="btn btn-primary" >See Projects</a>
+              <a href="#projects" class="btn btn-primary" >My Projects</a>
             </div>
           </div>
         </div>
@@ -95,7 +95,7 @@
       <section class="aboutsec" id="about">
         <div class="main-container">
           <div class="section-header text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-            <h2>What we do?</h2>
+            <h2>My specialization</h2>
           </div>
           <div class="about-inner">
             <div class="about-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
@@ -134,27 +134,27 @@
 
 <!-- GET SECTION -->
 
-      <section class="getsection">
-        <div class="main-container">
-          <div class="section-header text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-            <h2>What will you get?</h2>
-          </div>
-          <div class="get-inner d-md-flex align-items-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-            <div class="get-item w-lg-50">
-              <p>We specialize in creating innovative and customized solutions using state-of-the-art technologies. Our team of talented engineers, led by Roman Larionov himself, is passionate about delivering exceptional results, and we are committed to helping our clients thrive in the digital landscape.</p>
-            </div>
-            <div class="get-item w-lg-50">
-              <ul>
-                <li>✓ Exceptional Quality</li>
-                <li>✓ Customized Approach</li>
-                <li>✓ Transparent Communication</li>
-                <li>✓ Cutting-Edge Technologies</li>
-                <li>✓ On-Time Delivery</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
+<section class="getsection">
+  <div class="main-container">
+    <div class="section-header text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
+      <h2>What sets me apart?</h2>
+    </div>
+    <div class="get-inner d-md-flex align-items-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
+      <div class="get-item w-lg-50">
+        <p>As an experienced professional in the field, I specialize in creating innovative and customized solutions using state-of-the-art technologies. You can trust that my expertise and commitment to quality will ensure the successful implementation of projects and contribute to your company's growth. I am confident that my efforts will yield outstanding outcomes and drive your organization forward.</p>
+      </div>
+      <div class="get-item w-lg-50">
+        <ul>
+          <li>✓ Exceptional Quality</li>
+          <li>✓ Customized Approach</li>
+          <li>✓ Transparent Communication</li>
+          <li>✓ Cutting-Edge Technologies</li>
+          <li>✓ On-Time Delivery</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- GET SECTION -->
 
@@ -163,8 +163,8 @@
       <section class="introducing-section">
         <div class="main-container">
           <div class="section-header section-header-white text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-            <h4>Introducing Roman Lab:</h4>
-            <h2>Your Partner in Cutting-Edge <br> Software and Web Development </h2>
+            <h4>Introducing Roman Larionov:</h4>
+            <h2>As a seasoned Software Engineer, I specialize in creating innovative and customized solutions using cutting-edge technologies. Whether you need custom software development, captivating UI/UX design, web development, or mobile app development, I have the skills and expertise to bring your vision to life. </h2>
           </div>
           <div class="introducing-inner">
             <div class="intro-items w-lg-50" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
@@ -187,7 +187,7 @@
 <section class="ourproduct-section" id="projects">
   <div class="main-container">
     <div class="section-header text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-      <h2>Our Projects:</h2>
+      <h2>Portfolio Highlights:</h2>
     </div>
     <div class="ourproduct-inner">
       <a href="#" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
@@ -232,9 +232,9 @@
       <section class="contactsection" id="contact">
         <div class="main-container">
           <div class="section-header section-header-white text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-            <h4>Are you ready to take your business to new heights with <br> cutting-edge software and web development solutions? </h4>
-            <h2>Contact Roman Lab <br> today for a consultation </h2>
-            <p>We look forward to partnering with you to bring your digital vision to life.</p>
+            <h4>Are you seeking to enhance your company's digital presence with cutting-edge software and web development solutions? As an experienced web developer and software engineer, I am here to assist you. Contact me today to schedule a consultation and discuss how we can work together to bring your digital vision to life. I am excited about the possibility of partnering with you and helping your business reach new heights.
+            </h4>
+            <br>
 
             <div class="addresslink">
               <ul>
