--- a/runpage2.html
+++ b/runpage2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <title>Roman Lab</title>
     <meta charset="utf-8">
@@ -33,16 +33,16 @@
               <a href="https://www.linkedin.com/in/romanlarionov" target="_blank"><img src="assets/images/link-icon.png"></a>
             </div>
             <ul>
-              <li><a href="#about">ABOUT</a></li>
-              <li><a href="#projects">PROJECTS</a></li>
-              <li><a href="#contact">CONTACT</a></li>
+              <li><a href="#about">ОБО МНЕ</a></li>
+              <li><a href="#projects">ПРОЕКТЫ</a></li>
+              <li><a href="#contact">КОНТАКТЫ</a></li>
             </ul>
           </div>
           <div class="header-right">
             <div class="header-lang">
               <ul>
-                <li><a href="#"><img src="assets/images/lang-icon_01.png"></a></li>
-                <li><a href="./ruspage.html"><img src="assets/images/lang-icon_02.png"></a></li>
+                <li><a href="./index2.html"><img src="assets/images/lang-icon_01.png"></a></li>
+                <li><a href="#"><img src="assets/images/lang-icon_02.png"></a></li>
               </ul>
             </div>
             <div id="sidebar" class="mobilemenu">
@@ -53,9 +53,9 @@
               </div>
               <div class="mobilelist">
                 <ul>
-                  <li><a href="#about">ABOUT</a></li>
-                  <li><a href="#projects">PROJECTS</a></li>
-                  <li><a href="#contact">CONTACT</a></li>
+                  <li><a href="#about">ОБО МНЕ</a></li>
+                  <li><a href="#projects">ПРОЕКТЫ</a></li>
+                  <li><a href="#contact">КОНТАКТЫ</a></li>
                 </ul>
               </div>
             </div>
@@ -73,16 +73,16 @@
       <section class="homebanner">
         <div class="main-container">
           <div class="inner-content text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-            <h1>Welcome to <br> Roman Lab </h1>
-            <p>Leading software and web development company <br> founded and operated by Roman Larionov </p>
+            <h1>Добро пожаловать в <br> портфолио Романа Ларионова</h1>
+<p>Роман Ларионов <br> Веб-разработчик и программный инженер</p>
             <div class="action-button">
-              <a href="#projects" class="btn btn-primary" >See Projects</a>
+              <a href="#projects" class="btn btn-primary" >Мои проекты</a>
             </div>
           </div>
         </div>
         <div class="banner-bottomsection" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
           <div class="main-container">
-            <p>YOUR PARTNER IN CUTTING-EDGE SOFTWARE AND WEB DEVELOPMENT</p>
+            <p>ВАШ ПАРТНЕР В РАЗРАБОТКЕ СОВРЕМЕННОГО ПРОГРАММНОГО ОБЕСПЕЧЕНИЯ И ВЕБ-ПРИЛОЖЕНИЙ</p>
           </div>
         </div>
       </section>
@@ -95,7 +95,7 @@
       <section class="aboutsec" id="about">
         <div class="main-container">
           <div class="section-header text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-            <h2>What we do?</h2>
+            <h2>Моя специализация</h2>
           </div>
           <div class="about-inner">
             <div class="about-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
@@ -103,28 +103,28 @@
                 <img src="assets/images/custom-software.svg" class="offhover">
                 <img src="assets/images/custom-software-hover.svg" class="onhover">
               </div>
-              <h6>Custom Software Development</h6>
+              <h6>Разработка индивидуального программного обеспечения</h6>
             </div>
             <div class="about-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="520">
               <div class="about-icon">
                 <img src="assets/images/web-development.svg" class="offhover">
                 <img src="assets/images/web-development-hover.svg" class="onhover">
               </div>
-              <h6>Web Development</h6>
+              <h6>Веб-разработка</h6>
             </div>
             <div class="about-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="540">
               <div class="about-icon">
                 <img src="assets/images/ux-design.svg" class="offhover">
                 <img src="assets/images/ux-design-hover.svg" class="onhover">
               </div>
-              <h6>UI/UX Design</h6>
+              <h6>UI/UX Дизайн</h6>
             </div>
             <div class="about-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="560">
               <div class="about-icon">
                 <img src="assets/images/mobile-app.svg" class="offhover">
                 <img src="assets/images/mobile-app-hover.svg" class="onhover">
               </div>
-              <h6>Mobile App Development</h6>
+              <h6>Разработка мобильных приложений</h6>
             </div>
           </div>
         </div>
@@ -137,19 +137,19 @@
       <section class="getsection">
         <div class="main-container">
           <div class="section-header text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-            <h2>What will you get?</h2>
+            <h2>Что отличает меня от других?</h2>
           </div>
           <div class="get-inner d-md-flex align-items-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
             <div class="get-item w-lg-50">
-              <p>We specialize in creating innovative and customized solutions using state-of-the-art technologies. Our team of talented engineers, led by Roman Larionov himself, is passionate about delivering exceptional results, and we are committed to helping our clients thrive in the digital landscape.</p>
+              <p>Как опытный профессионал в области разработки программного обеспечения н вэб разработки, я специализируюсь на создании инновационных и индивидуальных решений с использованием передовых технологий. Вы можете быть уверены, что мои знания и приверженность к качеству обеспечат успешную реализацию проектов и способствуют росту вашей компании. Я уверен, что мои усилия приведут к высоким результатам и продвинут вашу организацию вперед.</p>
             </div>
             <div class="get-item w-lg-50">
               <ul>
-                <li>✓ Exceptional Quality</li>
-                <li>✓ Customized Approach</li>
-                <li>✓ Transparent Communication</li>
-                <li>✓ Cutting-Edge Technologies</li>
-                <li>✓ On-Time Delivery</li>
+                <li>✓ Исключительное качество</li>
+                <li>✓ Индивидуальный подход</li>
+                <li>✓ Прозрачная коммуникация</li>
+                <li>✓ Современные технологии</li>
+                <li>✓ Своевременный результат</li>
               </ul>
             </div>
           </div>
@@ -163,13 +163,12 @@
       <section class="introducing-section">
         <div class="main-container">
           <div class="section-header section-header-white text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-            <h4>Introducing Roman Lab:</h4>
-            <h2>Your Partner in Cutting-Edge <br> Software and Web Development </h2>
+            <h4>Кто такой Роман Ларионов:</h4>
+            <h2>Ваш партнер в передовой <br> разработке программного обеспечения <br> и веб-разработке </h2>
           </div>
           <div class="introducing-inner">
             <div class="intro-items w-lg-50" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-              <p> We are a leading software and web development company founded and operated by Roman Larionov, a seasoned Software Engineer. We specialize in creating innovative and customized solutions using state-of-the-art technologies. </p>
-              <p> Our team of talented engineers, led by Roman Larionov himself, is passionate about delivering exceptional results, and we are committed to helping our clients thrive in the digital landscape.</p>
+              <p> Будучи опытным программным инженером, я специализируюсь на создании инновационных и индивидуальных решений с использованием передовых технологий. Независимо если это разработка индивидуального программного обеспечения, или захватывающий дизайн пользовательского интерфейса (UI/UX), веб-разработка или разработка мобильных приложений, у меня есть навыки и опыт, для воплощения таких проектов в жизнь. </p>
             </div>
             <div class="intro-items w-lg-50" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
               <div class="profile-img">
@@ -187,7 +186,7 @@
 <section class="ourproduct-section" id="projects">
   <div class="main-container">
     <div class="section-header text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-      <h2>Our Projects:</h2>
+      <h2>Мои проекты:</h2>
     </div>
     <div class="ourproduct-inner">
       <a href="#" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
@@ -232,15 +231,13 @@
       <section class="contactsection" id="contact">
         <div class="main-container">
           <div class="section-header section-header-white text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-            <h4>Are you ready to take your business to new heights with <br> cutting-edge software and web development solutions? </h4>
-            <h2>Contact Roman Lab <br> today for a consultation </h2>
-            <p>We look forward to partnering with you to bring your digital vision to life.</p>
+            <h4>Если вы ищете возможность усовершенствовать цифровое развитие вашей компании с помощью передовых решений в области программного обеспечения и веб-разработки, то как опытный веб-разработчик и программный инженер, я буду рад вам в этом помочь. Свяжитесь со мной уже сегодня, для бесплатной консультации и обсуждения того, как наше сотрудничество поможет воплотить ваше видение в жизнь. Для меня очень интересно возможное партнерство с вами и возможность помощь вашему бизнесу достичь новых высот.</p>
 
             <div class="addresslink">
               <ul>
                 <li><a href="mailto:info@romanlab.dev"><i class="fa fa-envelope-o" aria-hidden="true"></i> info@romanlab.dev</a></li>
                 <li><a href="tel:+1 843 640 5878"><i class="fa fa-phone" aria-hidden="true"></i> +1 843 640 5878</a></li>
-                <li><a href=""><i class="fa fa-home" aria-hidden="true"></i> Charleston South Carolina</a></li>
+                <li><a href=""><i class="fa fa-home" aria-hidden="true"></i> Москва</a></li>
               </ul>
             </div>
           </div>
