Updated Projects links and pics

--- a/rupage2.html
+++ b/rupage2.html
@@ -189,34 +189,64 @@
       <h2>Мои проекты:</h2>
     </div>
     <div class="ourproduct-inner">
+      <a href="https://drive.google.com/file/d/18QUl4p812Yp6UeXs5kdmbkVN_R9f6NbV/view?usp=drive_link" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" target="_blank">
+        <div class="our-item">
+          <img src="assets/images/lake-kit.jpg">
+        </div>
+      </a>
+      <a href="https://web.archive.org/web/20141217013655/http://bigdsroyaltees.com/" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" target="_blank">
+        <div class="our-item">
+          <img src="assets/images/BigDs.jpg">
+        </div>
+      </a>
+      <a href="https://web.archive.org/web/20181114234206/http://freshideaweb.com/" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" target="_blank">
+        <div class="our-item">
+          <img src="assets/images/Fresh-Idea-Web.png">
+        </div>
+      </a>
+      <a href="https://drive.google.com/file/d/1vnhKa0D9roy-U8galWM8G3kLRTuA-RMa/view?usp=drive_link" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" target="_blank">
+        <div class="our-item">
+          <img src="assets/images/IGW.jpg">
+        </div>
+      </a>
+      <a href="https://drive.google.com/file/d/1oQgD_5CptiRpwLJtfsM_-Q21Uy2vBzaD/view?usp=drive_link" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" target="_blank">
+        <div class="our-item">
+          <img src="assets/images/Lacombe _ Cooper.jpg">
+        </div>
+      </a>
+      <a href="https://rocknrome.github.io/Tea-Cozy/" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" target="_blank">
+        <div class="our-item">
+          <img src="assets/images/Tea-Cozy.png">
+        </div>
+      </a>
       <a href="#" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
         <div class="our-item">
           <img src="assets/images/Calculator.png">
         </div>
       </a>
-      <a href="#" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
+      <a href="#" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" target="_blank">
         <div class="our-item">
-          <img src="assets/images/To-Do-List.png">
+          <img src="assets/images/Filmpire.png">
         </div>
       </a>
-      <a href="#" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
+      <a href="https://rocknrome.github.io/Simple-dots-game/level-one.html" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" target="_blank">
         <div class="our-item">
           <img src="assets/images/Dots-Game.png">
         </div>
       </a>
-      <a href="#" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
+      <a href="https://weather-app-rnr.netlify.app/" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" target="_blank">
         <div class="our-item">
           <img src="assets/images/weather-app.png">
         </div>
       </a>
-      <a href="#" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
+      <a href="https://todo-list-rnr.netlify.app/" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" target="_blank">
         <div class="our-item">
-          <img src="assets/images/Calculator.png">
+          <img src="assets/images/To-Do-List.png">
         </div>
       </a>
       <a href="#" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
         <div class="our-item">
-          <img src="assets/images/To-Do-List.png">
+          <img src="assets/images/color-switcher.png">
         </div>
       </a>
     </div>
