Updated menu for HR version and uploaded PDF Resume

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <span></span>
               </div>
               <div class="mobilelist">
+                <div class="close-btn">&times;</div>
                 <ul>
                   <li><a href="#about">ABOUT</a></li>
                   <li><a href="#projects">PROJECTS</a></li>
@@ -160,13 +161,13 @@
 
 <!-- INTRODUCTION SECTION -->
 
-      <section class="introducing-section">
+      <section class="introduction-section">
         <div class="main-container">
           <div class="section-header section-header-white text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
             <h4>Introducing Roman Lab:</h4>
             <h2>Your Partner in Cutting-Edge <br> Software and Web Development </h2>
           </div>
-          <div class="introducing-inner">
+          <div class="introduction-inner">
             <div class="intro-items w-lg-50" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
               <p> We are a leading software and web development company founded and operated by Roman Larionov, a seasoned Software Engineer. We specialize in creating innovative and customized solutions using state-of-the-art technologies. </p>
               <p> Our team of talented engineers, led by Roman Larionov himself, is passionate about delivering exceptional results, and we are committed to helping our clients thrive in the digital landscape.</p>
@@ -187,10 +188,10 @@
 <section class="ourproduct-section" id="projects">
   <div class="main-container">
     <div class="section-header text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-      <h2>Our Projects:</h2>
+      <h2>Наши проекты:</h2>
     </div>
     <div class="ourproduct-inner">
-      <<a href="https://drive.google.com/file/d/18QUl4p812Yp6UeXs5kdmbkVN_R9f6NbV/view?usp=drive_link" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" target="_blank">
+      <a href="https://drive.google.com/file/d/18QUl4p812Yp6UeXs5kdmbkVN_R9f6NbV/view?usp=drive_link" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" target="_blank">
         <div class="our-item">
           <img src="assets/images/lake-kit.jpg">
         </div>
@@ -268,9 +269,8 @@
 
             <div class="addresslink">
               <ul>
-                <li><a href="mailto:info@romanlab.dev"><i class="fa fa-envelope-o" aria-hidden="true"></i> info@romanlab.dev</a></li>
-                <li><a href="tel:+1 843 640 5878"><i class="fa fa-phone" aria-hidden="true"></i> +1 843 640 5878</a></li>
-                <li><a href=""><i class="fa fa-home" aria-hidden="true"></i> Charleston South Carolina</a></li>
+                <li><a href="mailto:info@romanlab.dev"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+                <li><a href="tel:+1 843 640 5878"><i class="fa fa-phone" aria-hidden="true"></i></a></li>
               </ul>
             </div>
           </div>
