--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Roman Lab</title>
+    <title>Roman Larionov</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -52,6 +52,7 @@
                 <span></span>
               </div>
               <div class="mobilelist">
+                <div class="close-btn">&times;</div>
                 <ul>
                   <li><a href="#about">ABOUT</a></li>
                   <li><a href="#projects">PROJECTS</a></li>
@@ -160,13 +161,13 @@
 
 <!-- INTRODUCTION SECTION -->
 
-      <section class="introducing-section">
+      <section class="introduction-section">
         <div class="main-container">
           <div class="section-header section-header-white text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
             <h4>Introducing Roman Larionov:</h4>
             <h2>As a seasoned Software Engineer, I specialize in creating innovative and customized solutions using cutting-edge technologies. Whether you need custom software development, captivating UI/UX design, web development, or mobile app development, I have the skills and expertise to bring your vision to life. </h2>
           </div>
-          <div class="introducing-inner">
+          <div class="introduction-inner">
             <div class="intro-items w-lg-50" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
               <p> We are a leading software and web development company founded and operated by Roman Larionov, a seasoned Software Engineer. We specialize in creating innovative and customized solutions using state-of-the-art technologies. </p>
               <p> Our team of talented engineers, led by Roman Larionov himself, is passionate about delivering exceptional results, and we are committed to helping our clients thrive in the digital landscape.</p>
@@ -268,9 +269,8 @@
 
             <div class="addresslink">
               <ul>
-                <li><a href="mailto:info@romanlab.dev"><i class="fa fa-envelope-o" aria-hidden="true"></i> info@romanlab.dev</a></li>
-                <li><a href="tel:+1 843 640 5878"><i class="fa fa-phone" aria-hidden="true"></i> +1 843 640 5878</a></li>
-                <li><a href=""><i class="fa fa-home" aria-hidden="true"></i> Charleston South Carolina</a></li>
+                <li><a href="mailto:info@romanlab.dev"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+                <li><a href="tel:+1 843 640 5878"><i class="fa fa-phone" aria-hidden="true"></i></a></li>
               </ul>
             </div>
           </div>
