--- a/rupage2.html
+++ b/rupage2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ru">
   <head>
-    <title>Roman Lab</title>
+    <title>Роман Ларионов</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -52,6 +52,7 @@
                 <span></span>
               </div>
               <div class="mobilelist">
+                <div class="close-btn">&times;</div>
                 <ul>
                   <li><a href="#about">ОБО МНЕ</a></li>
                   <li><a href="#projects">ПРОЕКТЫ</a></li>
@@ -160,13 +161,13 @@
 
 <!-- INTRODUCTION SECTION -->
 
-      <section class="introducing-section">
+      <section class="introduction-section">
         <div class="main-container">
           <div class="section-header section-header-white text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
             <h4>Кто такой Роман Ларионов:</h4>
             <h2>Ваш партнер в передовой <br> разработке программного обеспечения <br> и веб-разработке </h2>
           </div>
-          <div class="introducing-inner">
+          <div class="introduction-inner">
             <div class="intro-items w-lg-50" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
               <p> Будучи опытным программным инженером, я специализируюсь на создании инновационных и индивидуальных решений с использованием передовых технологий. Независимо если это разработка индивидуального программного обеспечения, или захватывающий дизайн пользовательского интерфейса (UI/UX), веб-разработка или разработка мобильных приложений, у меня есть навыки и опыт, для воплощения таких проектов в жизнь. </p>
             </div>
@@ -263,13 +264,12 @@
           <div class="section-header section-header-white text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
             <h4>Если вы ищете возможность усовершенствовать цифровое развитие вашей компании с помощью передовых решений в области программного обеспечения и веб-разработки, то как опытный веб-разработчик и программный инженер, я буду рад вам в этом помочь. Свяжитесь со мной уже сегодня, для бесплатной консультации и обсуждения того, как наше сотрудничество поможет воплотить ваше видение в жизнь. Для меня очень интересно возможное партнерство с вами и возможность помощь вашему бизнесу достичь новых высот.</p>
 
-            <div class="addresslink">
-              <ul>
-                <li><a href="mailto:info@romanlab.dev"><i class="fa fa-envelope-o" aria-hidden="true"></i> info@romanlab.dev</a></li>
-                <li><a href="tel:+1 843 640 5878"><i class="fa fa-phone" aria-hidden="true"></i> +1 843 640 5878</a></li>
-                <li><a href=""><i class="fa fa-home" aria-hidden="true"></i> Москва</a></li>
-              </ul>
-            </div>
+              <div class="addresslink">
+                <ul>
+                  <li><a href="mailto:info@romanlab.dev"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+                  <li><a href="tel:+1 843 640 5878"><i class="fa fa-phone" aria-hidden="true"></i></a></li>
+                </ul>
+              </div>
           </div>
         </div>
       </section>
