--- a/ruspage.html
+++ b/ruspage.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ru">
   <head>
-    <title>Roman Lab</title>
+    <title>Роман Ларионов</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -52,6 +52,7 @@
                 <span></span>
               </div>
               <div class="mobilelist">
+                <div class="close-btn">&times;</div>
                 <ul>
                   <li><a href="#about">О НАС</a></li>
                   <li><a href="#projects">ПРОЕКТЫ</a></li>
@@ -160,13 +161,13 @@
 
 <!-- INTRODUCTION SECTION -->
 
-      <section class="introducing-section">
+      <section class="introduction-section">
         <div class="main-container">
           <div class="section-header section-header-white text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
             <h4>Представляем Roman Lab:</h4>
             <h2>Ваш партнер в передовой <br> разработке программного обеспечения <br> и веб-разработке </h2>
           </div>
-          <div class="introducing-inner">
+          <div class="introduction-inner">
             <div class="intro-items w-lg-50" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
               <p> Мы ведущая компания по разработке программного обеспечения и веб-разработке, основанная и управляемая опытным программным инженером Романом Ларионовым. Мы специализируемся на создании инновационных и индивидуальных решений с использованием передовых технологий. </p>
               <p> Наша команда талантливых инженеров, возглавляемая самим Романом Ларионовым, постоянно стремится предоставлять исключительные результаты. Мы привержены помогать нашим клиентам процветать в цифровом мире.</p>
@@ -268,8 +269,8 @@
 
             <div class="addresslink">
               <ul>
-                <li><a href="mailto:info@romanlab.dev"><i class="fa fa-envelope-o" aria-hidden="true"></i> info@romanlab.dev</a></li>
-                <li><a href="tel:+1 843 640 5878"><i class="fa fa-phone" aria-hidden="true"></i> +1 843 640 5878</a></li>
+                <li><a href="mailto:info@romanlab.dev"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+                <li><a href="tel:+1 843 640 5878"><i class="fa fa-phone" aria-hidden="true"></i></a></li>
               </ul>
             </div>
           </div>
