Updated Projects pege, added WhatApp icon in Contacts, added 42 projects with images and links

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <section class="ourproduct-section" id="projects">
   <div class="main-container">
     <div class="section-header text-center" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-      <h2>Наши проекты:</h2>
+      <h2>Our Projects:</h2>
     </div>
     <div class="ourproduct-inner">
       <a href="https://drive.google.com/file/d/18QUl4p812Yp6UeXs5kdmbkVN_R9f6NbV/view?usp=drive_link" class="ourproduct-item" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" target="_blank">
