--- a/index2.html
+++ b/index2.html
@@ -36,6 +36,7 @@
               <li><a href="#about">ABOUT</a></li>
               <li><a href="#projects">PROJECTS</a></li>
               <li><a href="#contact">CONTACT</a></li>
+              <li><a href="./assets/ROMAN_LARIONOV_RESUME_FRONT_END.pdf" download="Roman-Larionov-Resume.pdf">DOWNLOAD RESUME</a></li>
             </ul>
           </div>
           <div class="header-right">
@@ -57,6 +58,7 @@
                   <li><a href="#about">ABOUT</a></li>
                   <li><a href="#projects">PROJECTS</a></li>
                   <li><a href="#contact">CONTACT</a></li>
+                  <li><a href="./assets/ROMAN_LARIONOV_RESUME_FRONT_END.pdf" download="Roman-Larionov-Resume.pdf">DOWNLOAD RESUME</a></li>
                 </ul>
               </div>
             </div>
