--- a/rupage2.html
+++ b/rupage2.html
@@ -36,6 +36,7 @@
               <li><a href="#about">ОБО МНЕ</a></li>
               <li><a href="#projects">ПРОЕКТЫ</a></li>
               <li><a href="#contact">КОНТАКТЫ</a></li>
+              <li><a href="#resume">СКАЧАТЬ РЕЗЮМЕ</a></li>
             </ul>
           </div>
           <div class="header-right">
@@ -57,6 +58,7 @@
                   <li><a href="#about">ОБО МНЕ</a></li>
                   <li><a href="#projects">ПРОЕКТЫ</a></li>
                   <li><a href="#contact">КОНТАКТЫ</a></li>
+                  <li><a href="#resume">СКАЧАТЬ РЕЗЮМЕ</a></li>
                 </ul>
               </div>
             </div>
