--- a/ruspage.html
+++ b/ruspage.html
@@ -272,7 +272,7 @@
               <ul>
                 <li><a href="mailto:info@romanlab.dev"><i class="far fa-envelope" aria-hidden="true"></i></a></li>
                 <li><a href="tel:+1 843 640 5878"><i class="fa fa-phone" aria-hidden="true"></i></a></li>
-                <li><a href="tel:+1 843 338 5171"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
+                <li><a href="https://wa.me/18433385171"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
               </ul>
             </div>
           </div>
